CR-2004-01-31-0: Enhancem.: shadowd now supports new communication library
                 Changed:   shadowd
                 Review:    pending

SG-2004-01-31-1: Bugfix:    fixed qconf -de. A exec host can be removed, even
                            so the host can not be resolved.
                 Changed:   qconf
                 Issue:     566
                 Review:    pending

JG-2004-01-31-1: Testsuite: Fixed a number of installation problems caused by
                            changed objects (queue, schedd_conf) and changed
                            architecture names.

JG-2004-01-31-0: Enhancem.: qmake can either use a parallel environment for the
                            execution of make rules, or create an individual
                            qrsh job for each make rule (dynamic allocation).
                 Issue:     338
                 Changed:   qmake, qmake.1
                 Review:    pending

MD-2004-01-31-1: Bugfix:    - Removed conflict
                 Changed:   - sge_config
 
MD-2004-01-31-0: Bugfix:    - Change DB install procedure -> only standalone 
                              installation, removed from autoinstallation
                            - changed berkeley rc script, supports multible
                              spooling homes now
                            - added shutdown functionality to sgebdb
                            - introduced bdbhomes file
                            - additional module sge_config_berkeley.sh
                            - autoinstall default configfile removed ->
                              the -auto option requires a path to config file
                            - pkgadd rights
                            - typos and cleanups 
                 Changed:   - sge_config

SD-2004-01-30-2: Bugfix:    Fixed compile problem
                 Changed:   qmon

SD-2004-01-30-1: Enhancem.: Removed user_sort from sched_conf(5)
                 Changed:   sched_conf(5)