@@ -1189,15 +1189,8 @@ DPRINTF(("ep: %s %s\n",
          /* no adminhost/manager check needed here */
          spp = sge_parser_get_next(spp);
          parse_name_list_to_cull("host to del", &lp, EH_Type, EH_name, *spp);
-printf("1..\n");         
-lWriteListTo(lp, stdout);
-printf("1..\n");
          del_host_of_type(lp, SGE_EXECHOST_LIST);
-printf("2..\n");         
-lWriteListTo(lp, stdout);
-printf("2..\n");
          lp = lFreeList(lp);
-
          spp++;
          continue;
       }
@@ -4752,6 +4745,7 @@ u_long32 target
       }
 #endif
 #endif
+
       /* make a new host element */
       lp = lCreateList("host to add", type);
       ep = lCopyElem(argep);
